@@ -4,7 +4,9 @@ var defaultSites = {
   'Barron\'s': 'barrons.com',
   'Crain\'s Chicago Business': 'chicagobusiness.com',
   'Chicago Tribune': 'chicagotribune.com',
+  'Corriere Della Sera': 'corriere.it',
   'Daily Press': 'dailypress.com',
+  'Dagens Nyheter': 'dn.se',
   'The Economist': 'economist.com',
   'Financial Times': 'ft.com',
   'Glassdoor': 'glassdoor.com',
