@@ -1,4 +1,5 @@
 Updates--
+2018-04-05 v1.2.0: added Corriere Della Sera (corriere.it), added Dagens Nyheter (dn.se), fixed The Age (theage.com.au)
 2018-01-30 v1.0.7: Added Medium (medium.com), added The Boston Globe (bostonglobe.com), added The Mercury News (mercurynews.com), removed The Australian (theaustralian.com.au), removed The Courier Mail (couriermail.com.au), removed The Telegraph (telegraph.co.uk)
 2017-09-14 v1.06: Added back Barron's, added Het Financieele Dagblad (fd.nl), added Le Temps (letemps.ch), added Haaretz (haaretz.co.il)
 2017-07-15 v1.05: removed Barron's as the google redirect no longer works
@@ -15,7 +16,9 @@ Baltimore Sun (baltimoresun.com)
 Barron's (barrons.com)
 Crain's Chicago Business (chicagobusiness.com)
 Chicago Tribune (chicagotribune.com)
+Corriere Della Sera (corriere.it)
 Daily Press (dailypress.com)
+Dagens Nyheter (dn.se)
 The Economist (economist.com)
 Financial Times (ft.com)
 Glassdoor (glassdoor.com)
